--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,6 @@
 # File: .github/workflows/publish.yml
 name: publish-to-github-pages
+
 on:
   push:
     branches:
@@ -22,16 +23,17 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
-      - name: Setup Node.js ⚙️ - Cache dependencies ⚡ - Install dependencies 🔧
+      - name: Setup Node.js ⚙️ - Install dependencies 🔧
         uses: ./.github/workflows/setup-node
 
-      - name: Setup Pages ⚙️
-        uses: actions/configure-pages@v4
-        with:
-          static_site_generator: next
+      - name: Clean output directory 🧹
+        run: rm -rf out
 
       - name: Build with Next.js 🏗️
         run: npx next build
+
+      - name: Export static site 📦
+        run: npx next export
 
       - name: Upload artifact 📡
         uses: actions/upload-pages-artifact@v3
