--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
         run: rm -rf out
 
       - name: Build with Next.js 🏗️
-        run: npx next build
+        run: npm run build
 
       - name: Export static site 📦
         run: npx next export
