--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm run build
 
       - name: Export static site 📦
-        run: npx next export
+        run: npm run export
 
       - name: Upload artifact 📡
         uses: actions/upload-pages-artifact@v3
