fixing static paths

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,10 @@ jobs:
         run: echo "NEXT_PUBLIC_BASE_PATH=/opst-alexu" >> $GITHUB_ENV
       
       - name: set ENV for static github export with correct asset path
-        run: echo "NEXT_EXPORT=false" >> $GITHUB_ENV
+        run: echo "NEXT_EXPORT=true" >> $GITHUB_ENV
+
+      - name: set ENV for static github export with correct asset path
+        run: echo "NEXT_PUBLIC_GITHUB_PAGES=true" >> $GITHUB_ENV
 
       - name: Build with Next.js 🏗️
         run: npm run build
